z-index bug solved

--- a/css/base.css
+++ b/css/base.css
@@ -39,7 +39,7 @@ h3 {
     display: none;
     justify-content: center;
     align-items: center;
-    z-index: 1001;
+    z-index: 1002;
     position: absolute;
 }
 
